made slight changes to table anf fixed crashing texts on mobile

--- a/src/styles/less/TrophyRoom.less
+++ b/src/styles/less/TrophyRoom.less
@@ -4,6 +4,13 @@
 
 .leaderboard {
   width: 50%;
+  @media (max-width: 768px){
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
 }
 
 .parent:nth-of-type(odd) {
@@ -100,9 +107,10 @@
   // width: 95%;
   justify-content: center;
   margin: auto;
-  // @media screen and (@mobile){
-    //     flex-direction: column;
-    // }
+  @media (max-width: 768px){
+    flex-direction: column;
+    align-content: center;
+  }
 }
 
 .modal-container {
